@@ -15,6 +15,7 @@ result = model.move_object_down(id)
 if result:
     message = _("Moved ${id} down.",
                 mapping={'id': view.quotify(id)})
+    model.sec_update_last_author_info()
     return view.tab_edit(message_type="feedback", message=message)
 else:
     message = _("Could not move ${id} down.",
