@@ -16,4 +16,5 @@ if not context.REQUEST.has_key('__cp') or context.REQUEST['__cp'] is None:
     return view.tab_edit(message_type="error", message=_("No content available to paste."))
 
 message_type, message = model.action_paste(context.REQUEST)
+model.sec_update_last_author_info()
 return view.tab_edit(message_type=message_type, message=message)
