@@ -22,4 +22,5 @@ model.to_publication()
 model = getattr(parent, id)
 context.REQUEST.set('model', model)
 message = _("Changed into publication")
+model.sec_update_last_author_info()
 return model.edit['tab_settings'](message_type="feedback", message=message)
